add styles for news section

--- a/pages/home.html
+++ b/pages/home.html
@@ -21,6 +21,7 @@
           $("#skinreborn").load("./home/skinreborn.html");
           $("#gallery").load("./home/gallery.html");
           $("#story").load("./home/story.html");
+          $("#news").load("./home/news.html");
         });
     </script>  
 </head>
@@ -48,6 +49,9 @@
     </section>
     <section>
         <div id="story" class="story"></div>
+    </section>
+    <section>
+        <div id="news" class="news"></div>
     </section>
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.min.js"></script>
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.bundle.min.js"></script>
