FAM-19 add layout in footer section

--- a/pages/home.html
+++ b/pages/home.html
@@ -10,6 +10,7 @@
     <link href="../css/header.css" rel="stylesheet">
     <link href="../css/navbar.css" rel="stylesheet">
     <link href="../css/home.css" rel="stylesheet">
+    <link href="../css/footer.css" rel="stylesheet">
     <script src="../modules/jquery3.7.0.js"></script>
     <script> 
         $(function(){
@@ -22,6 +23,7 @@
           $("#gallery").load("./home/gallery.html");
           $("#story").load("./home/story.html");
           $("#news").load("./home/news.html");
+          $("#footer").load("./default-modules/footer.html");
         });
     </script>  
 </head>
@@ -53,6 +55,9 @@
     <section>
         <div id="news" class="news"></div>
     </section>
+    <footer>
+        <div id="footer" class="footer"></div>
+    </footer>
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.min.js"></script>
     <script src="../modules/bootstrap-5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="../js/home.js"></script>
