--- a/pages/default-modules/footer.html
+++ b/pages/default-modules/footer.html
@@ -1,11 +1,139 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Footer</h1>
-</body>
-</html>
+<div class="footer__background">
+    <div class="footer__icon">
+        <img src="../../assets/images/philosophy/arrow-foo.png">
+    </div>
+    <div class="footer__image-left">
+        <img src="../../assets/images/footer/icon-foo-1.png" alt="">
+    </div>
+    <div class="footer__image-right">
+        <img src="../../assets/images/footer/icon-foo-2.png" alt="">
+
+    </div>
+
+    <div class="footer__container">
+        <div class="footer__sitemap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <ul class="sitemap__title">
+                            <li class="sitemap__heading"><a>về chúng tôi</a></li>
+                            <li class="sitemap__heading"><a>lịch sử</a></li>
+                            <li class="sitemap__heading"><a>cơ sở hạ tầng</a></li>
+                            <li class="sitemap__heading"><a>tuyển dụng</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3">
+                        <ul class="sitemap__title">
+                            <li class="sitemap__heading"><a>dịch vụ điều trị</a></li>
+                            <li class="sitemap__heading"><a>câu hỏi thường gặp</a></li>
+                            <li class="sitemap__heading"><a>hồi đáp khách hàng</a></li>
+                            <li class="sitemap__heading"><a>web map</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3">
+                        <ul class="sitemap__title">
+                            <li class="sitemap__heading"><a>ưu đãi</a></li>
+                            <li class="sitemap__heading"><a>bảng giá</a></li>
+                            <li class="sitemap__heading"><a>chi phí theo liệu trình</a></li>
+                            <li class="sitemap__heading"><a>khách hàng đặc biệt</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3">
+                        <ul class="sitemap__title">
+                            <li class="sitemap__heading"><a>điều trị chăm sóc da</a></li>
+                            <li class="sitemap__heading"><a>điều trị nám</a></li>
+                            <li class="sitemap__heading"><a>điều trị sẹo</a></li>
+                            <li class="sitemap__heading"><a>điều trị mụn</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__about">
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="about__logo">
+                            <img src="../../assets/images/footer/logo-foo.png">
+                        </div>
+                    </div>
+                    <div class="col-lg-9">
+                        <div class="about__title">
+                            <h1>PAMAS BEAUTY GROUP</h1>
+                            <p>Sứ mệnh của Pamas là cung cấp những dịch vụ làm đẹp hoàn hảo giúp mang lại sức khoẻ, vẻ đẹp và hạnh phúc mỗi ngày cho mọi khách hàng.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="about__address">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="address__title">
+                                        <h5>hà nội</h5>
+                                    </div>
+                                    <div class="address__detail">
+                                        <p>57 Thái Hà, Q.Đống Đa | <a>04 – 3537 9980</a></p>
+                                        <p>01 Hòa Mã, Q. Hai Bà Trưng | <a>04 – 3976 1423</a></p>
+                                        <p>37 Thợ Nhuộm, Q. Hoàn Kiếm | <a>04 – 3936 1350</a></p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="address__title">
+                                        <h5>TP. Hồ Chí Minh</h5>
+                                    </div>
+                                    <div class="address__detail">
+                                        <p>* 63 Sương Nguyệt Ánh, Q.1 | <a>08 – 3925 2344</a></p>
+                                        <p>* 12L1, Vincom B,72 Lê Thánh Tôn, Q.1 | <a>086.684.8344</a></p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="address__title">
+                                        <h5>Vũng Tàu</h5>
+                                    </div>
+                                    <div class="address__detail">
+                                        <p>188 Trương Công Định, TP. Vũng Tàu | <a>08 – 3925 2344</a></p>
+                                    </div>
+                                    <div class="address__title">
+                                        <h5>Đà Nẵng</h5>
+                                    </div>
+                                    <div class="address__detail">
+                                        <p>188 Hoàng Diệu, Q.Hải Châu | <a>0511 – 386 8900</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>            
+        </div>
+
+        <div class="footer__digital">
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="digital__copyright">
+                            <p>© Bản quyền thuộc về <b>Pamas</b> 2016 Điều khoản</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="digital__socialmedia">
+                            <a href=""><i class="fa-solid fa-phone"></i></a>
+                            <a href=""><i class="fa-brands fa-instagram"></i></a>
+                            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href=""><i class="fa-brands fa-youtube"></i></a>
+                            <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__backtotop">
+            <a>
+                <i class="fa-solid fa-arrow-up"></i>
+            </a>
+        </div>
+    </div>
+    
+    
+</div>
