--- a/pages/test.html
+++ b/pages/test.html
@@ -1,71 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Slider Example</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-
-<body>
-    <div class="container">
-        <div id="carouselExample" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExample" data-slide-to="1"></li>
-                <li data-target="#carouselExample" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://via.placeholder.com/800x400?text=Image+1" class="d-block w-100" alt="Image 1">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://via.placeholder.com/800x400?text=Image+2" class="d-block w-100" alt="Image 2">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://via.placeholder.com/800x400?text=Image+3" class="d-block w-100" alt="Image 3">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+<div class="row">
+    <div class="col-lg-3"></div>
+    <div class="col-lg-2 start-col">
+        <div class="body__title">
+            <a href="#">tin tức pamas</a>
         </div>
-        
     </div>
+    <div class="col-lg-2">
+        <div class="body__title">
+            <a href="#">cẩm nang phụ nữ</a>
+        </div>
+    </div>
+    <div class="col-lg-2">
+        <div class="body__title">
+            <a href="#">xu hướng mới</a>
+        </div>
+    </div>
+</div>
 
-    <!-- Bootstrap JS (Optional if you already have it) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        // JavaScript to handle Next and Previous buttons
-        $(document).ready(function () {
-            var contentItems = $(".content");
-            var currentIndex = 0;
+<!-- Add unique identifiers (IDs) to each body__detail section for easier targeting -->
+<div class="body__detail" id="detail1">
+    <h1>Title 1</h1>>
+</div>
 
-            function showContent(index) {
-                contentItems.removeClass("active");
-                $(contentItems[index]).addClass("active");
-            }
+<div class="body__detail" id="detail2">
+    <h1>Title 2</h1>
+</div>
 
-            $(".prev-btn").click(function () {
-                currentIndex = (currentIndex - 1 + contentItems.length) % contentItems.length;
-                showContent(currentIndex);
+<div class="body__detail" id="detail3">
+    <h1>Title 3</h1>
+</div>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        // Hide all body__detail sections initially
+        var bodyDetails = document.querySelectorAll('.body__detail');
+        for (var i = 0; i < bodyDetails.length; i++) {
+            bodyDetails[i].style.display = 'none';
+        }
+
+        // Add click event listeners to each body__title link
+        var bodyTitles = document.querySelectorAll('.body__title a');
+        for (var i = 0; i < bodyTitles.length; i++) {
+            bodyTitles[i].addEventListener("click", function (event) {
+                event.preventDefault();
+
+                // Get the index of the clicked link
+                var index = Array.from(this.parentNode.parentNode.parentElement.children).indexOf(this.parentNode.parentNode);
+
+                // Hide all body__detail sections
+                for (var j = 0; j < bodyDetails.length; j++) {
+                    bodyDetails[j].style.display = 'none';
+                }
+
+                // Show the corresponding body__detail section based on the index
+                if (bodyDetails[index]) {
+                    bodyDetails[index].style.display = 'block';
+                }
             });
-
-            $(".next-btn").click(function () {
-                currentIndex = (currentIndex + 1) % contentItems.length;
-                showContent(currentIndex);
-            });
-        });
-    </script>
-</body>
-
-</html>
+        }
+    });
+</script>
