FAM-22 add layout in contactbar section

--- a/pages/default-modules/navigation.html
+++ b/pages/default-modules/navigation.html
@@ -1,8 +1,11 @@
+<div class="nav__logo-hidden">
+    <img src="../../assets/images/logo-sticky.png" alt="">
+</div>
 <div class="container">
     <div class="nav__menu"> 
         <ul class="nav__flexbox">
-            <li>Trang chủ</li>
-            <li>Triết lý điều trị</li>
+            <li class="dropdown__title">Trang chủ</li>
+            <li class="dropdown__title">Triết lý điều trị</li>
             <li class="dropdown">
                 <a class="dropdown__title">
                         Pamas Advanced Skincare
@@ -149,9 +152,38 @@
                 
             </li>
             
-            <li>Câu chuyện KH</li>
-            <li>Tư vấn</li>
-            <li>Liên hệ</li>
+            <li class="dropdown__title">Câu chuyện KH</li>
+            <li class="dropdown__title">Tư vấn</li>
+            <li class="dropdown__title">Liên hệ</li>
         </ul>
+    </div>
+</div>
+
+<div class="contactbar__container">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="contactbar__heading">
+                    <h5>(*) Hiệu quả tùy thuộc vào cơ địa của từng người</h5>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="contactbar__hotline">
+                    <div class="hotline__icon">
+                        <img src="../../assets/images/foo-phone-ico.png" alt="">
+                    </div>
+                    <div class="hotline__detail">
+                        <h2>04-3936-1350</h2>
+                        <p>gọi tư vấn ngay!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="contactbar__chatbox">
+                    <img src="../../assets/images/icon-chat.png" alt="">
+                    <h3>tư vấn trực tiếp</h3>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
