FAM-24 update styles for screen max-with 1024px

--- a/pages/home/news.html
+++ b/pages/home/news.html
@@ -6,8 +6,8 @@
         <div class="news__body">
             <div class="body__heading">
                 <div class="row">
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-2 start-col">
+                    <div class="col-xl-3 col-lg-1"></div>
+                    <div class="col-xl-2 col-lg-3 start-col">
                         <div class="body__title">
                             <a>tin tức pamas</a>
                             <div class="body__detail-replace">
@@ -42,7 +42,7 @@
                             </div> 
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-xl-2 col-lg-4">
                         <div class="body__title">
                             <a>cẩm nang phụ nữ</a>
                             <div class="body__detail-replace">
@@ -77,7 +77,7 @@
                             </div>  
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-xl-2 col-lg-3">
                         <div class="body__title">
                             <a>xu hướng mới</a>
                             <div class="body__detail-replace">
