--- a/pages/home/skinreborn.html
+++ b/pages/home/skinreborn.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="skinreborn__container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4 col-xl-5">
                     <div class="skinreborn__step">
                         <div class="skinreborn__image">
                             <img src="../../assets/images/skinreborn/img-skinrebon.png" alt="skin reborn" class="img-responsive">
@@ -14,7 +14,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-8 col-xl-7">
                     <div class="skinreborn__map">
                             <div class="heading__content">
                                 <h5>Skin reborn</h5>
