--- a/pages/default-modules/footer.html
+++ b/pages/default-modules/footer.html
@@ -58,12 +58,12 @@
             <div class="container">
                 <div class="about__content">
                     <div class="row">
-                        <div class="col-lg-1">
+                        <div class="col-xl-1 col-lg-2">
                             <div class="about__logo">
                                 <img src="../../assets/images/footer/logo-foo.png">
                             </div>
                         </div>
-                        <div class="col-lg-11">
+                        <div class="col-xl-11 col-lg-10">
                             <div class="about__title">
                                 <h1>PAMAS BEAUTY GROUP</h1>
                                 <p>Sứ mệnh của Pamas là cung cấp những dịch vụ làm đẹp hoàn hảo giúp mang lại sức khoẻ, vẻ đẹp và hạnh phúc mỗi ngày cho mọi khách hàng.</p>
@@ -117,12 +117,12 @@
             <div class="container">
 
                 <div class="row">
-                    <div class="col-lg-10">
+                    <div class="col-xl-10 col-lg-9">
                         <div class="digital__copyright">
                             <p>© Bản quyền thuộc về <b>Pamas</b> 2016 Điều khoản</p>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-xl-2 col-lg-3">
                         <div class="digital__socialmedia">
                             <a href=""><i class="fa-solid fa-phone"></i></a>
                             <a href=""><i class="fa-brands fa-instagram"></i></a>
