--- a/pages/default-modules/header.html
+++ b/pages/default-modules/header.html
@@ -27,7 +27,7 @@
         <div class="col-lg-3">
             <div class="header__right">
                 <div class="header__language dropdown">
-                    <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="btn primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="../../assets/images/lang-vi.png"> 
                         <span>Vietnamese</span>
                       </a>
