--- a/pages/home.html
+++ b/pages/home.html
@@ -11,6 +11,7 @@
     <link href="../css/navbar.css" rel="stylesheet">
     <link href="../css/home.css" rel="stylesheet">
     <link href="../css/footer.css" rel="stylesheet">
+    <link href="../css/resposive.css" rel="stylesheet">
     <script src="../modules/jquery3.7.0.js"></script>
     <script> 
         $(function(){
