FAM-25 resposive styles for mobile

--- a/pages/default-modules/footer.html
+++ b/pages/default-modules/footer.html
@@ -19,7 +19,7 @@
         <div class="footer__sitemap">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-md-6">
                         <ul class="sitemap__title">
                             <li class="sitemap__heading"><a>về chúng tôi</a></li>
                             <li class="sitemap__heading"><a>lịch sử</a></li>
@@ -27,7 +27,7 @@
                             <li class="sitemap__heading"><a>tuyển dụng</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-md-6">
                         <ul class="sitemap__title">
                             <li class="sitemap__heading"><a>dịch vụ điều trị</a></li>
                             <li class="sitemap__heading"><a>câu hỏi thường gặp</a></li>
@@ -35,7 +35,7 @@
                             <li class="sitemap__heading"><a>web map</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-md-6">
                         <ul class="sitemap__title">
                             <li class="sitemap__heading"><a>ưu đãi</a></li>
                             <li class="sitemap__heading"><a>bảng giá</a></li>
@@ -43,7 +43,7 @@
                             <li class="sitemap__heading"><a>khách hàng đặc biệt</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-md-6">
                         <ul class="sitemap__title">
                             <li class="sitemap__heading"><a>điều trị chăm sóc da</a></li>
                             <li class="sitemap__heading"><a>điều trị nám</a></li>
@@ -58,21 +58,21 @@
             <div class="container">
                 <div class="about__content">
                     <div class="row">
-                        <div class="col-xl-1 col-lg-2">
+                        <div class="col-xl-1 col-lg-2 col-md-2 col-sm-3">
                             <div class="about__logo">
                                 <img src="../../assets/images/footer/logo-foo.png">
                             </div>
                         </div>
-                        <div class="col-xl-11 col-lg-10">
+                        <div class="col-xl-11 col-lg-10 col-md-10 col-sm-9">
                             <div class="about__title">
                                 <h1>PAMAS BEAUTY GROUP</h1>
                                 <p>Sứ mệnh của Pamas là cung cấp những dịch vụ làm đẹp hoàn hảo giúp mang lại sức khoẻ, vẻ đẹp và hạnh phúc mỗi ngày cho mọi khách hàng.</p>
                             </div>
                         </div>
-                        <div class="col-lg-12">
+                        <div class="col-lg-12 col-md-12">
                             <div class="about__address">
                                 <div class="row">
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-6">
                                         <div class="address__title">
                                             <h5>hà nội</h5>
                                         </div>
@@ -82,7 +82,7 @@
                                             <p>37 Thợ Nhuộm, Q. Hoàn Kiếm | <a>04 – 3936 1350</a></p>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-6">
                                         <div class="address__title">
                                             <h5>TP. Hồ Chí Minh</h5>
                                         </div>
@@ -91,7 +91,7 @@
                                             <p>* 12L1, Vincom B,72 Lê Thánh Tôn, Q.1 | <a>086.684.8344</a></p>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 col-md-6">
                                         <div class="address__title">
                                             <h5>Vũng Tàu</h5>
                                         </div>
@@ -117,12 +117,12 @@
             <div class="container">
 
                 <div class="row">
-                    <div class="col-xl-10 col-lg-9">
+                    <div class="col-xl-10 col-lg-9 col-md-8 col-sm-8">
                         <div class="digital__copyright">
                             <p>© Bản quyền thuộc về <b>Pamas</b> 2016 Điều khoản</p>
                         </div>
                     </div>
-                    <div class="col-xl-2 col-lg-3">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-4">
                         <div class="digital__socialmedia">
                             <a href=""><i class="fa-solid fa-phone"></i></a>
                             <a href=""><i class="fa-brands fa-instagram"></i></a>
