--- a/pages/default-modules/navigation.html
+++ b/pages/default-modules/navigation.html
@@ -167,7 +167,7 @@
                     <h5>(*) Hiệu quả tùy thuộc vào cơ địa của từng người</h5>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="contactbar__hotline">
                     <div class="hotline__icon">
                         <img src="../../assets/images/foo-phone-ico.png" alt="">
@@ -178,7 +178,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="contactbar__chatbox">
                     <img src="../../assets/images/icon-chat.png" alt="">
                     <h3>tư vấn trực tiếp</h3>
