--- a/pages/home/philosophy.html
+++ b/pages/home/philosophy.html
@@ -6,13 +6,13 @@
         <div class="philosophy__container">
 
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-5 col-sm-12">
                     <div class="philosophy__picture">
                         <img src="../../assets/images/philosophy/center_image.jpg" alt="philosophy" class="img-responsive">
                     </div>
                 </div>
     
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-7 col-sm-12">
                     <div class="philosophy__content">
                         <div class="philosophy__title">
                             <h3>Triết lý trị liệu</h3>
