--- a/pages/home/skinreborn.html
+++ b/pages/home/skinreborn.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="skinreborn__container">
             <div class="row">
-                <div class="col-lg-4 col-xl-5">
+                <div class="col-lg-4 col-xl-5 col-md-12">
                     <div class="skinreborn__step">
                         <div class="skinreborn__image">
                             <img src="../../assets/images/skinreborn/img-skinrebon.png" alt="skin reborn" class="img-responsive">
@@ -14,7 +14,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-8 col-xl-7">
+                <div class="col-lg-8 col-xl-7 col-md-12">
                     <div class="skinreborn__map">
                             <div class="heading__content">
                                 <h5>Skin reborn</h5>
@@ -144,7 +144,7 @@
                             </div>      
                     </div>
                 </div>
-                <div class="col-lg-12">
+                <div class="col-lg-12 col-md-12">
                     <div class="skinreborn__title">
                         <h3>Hàng Nghìn Phụ Nữ Đã Kiểm Thử & Thành Công!</h3>
                         <p>Quá trình trị liệu và kiểm thử của khách hàng PAMAS</p>
