--- a/pages/home/smartchoice.html
+++ b/pages/home/smartchoice.html
@@ -5,7 +5,7 @@
     </div>
     <div class="smartchoice__content">
         <div class="row justify-content-center align-items-center">
-            <div class="col-lg-3">
+            <div class="col-lg-4 col-md-4">
                 <div class="smartchoice__single">
                     <div class="smartchoice__image">
                         <img src="../../assets/images/smartchoice/ico-about-1.png" alt="history">
@@ -25,7 +25,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3">
+            <div class="col-lg-4 col-md-4">
                 <div class="smartchoice__single">
                     <div class="smartchoice__image">
                         <img src="../../assets/images/smartchoice/ico-about-2.png" alt="discount">
@@ -45,7 +45,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3">
+            <div class="col-lg-4 col-md-4">
                 <div class="smartchoice__single">
                     <div class="smartchoice__image">
                         <img src="../../assets/images/smartchoice/ico-about-3.png" alt="book in advanced">
