--- a/pages/home/story.html
+++ b/pages/home/story.html
@@ -5,7 +5,7 @@
             <p>Những câu chuyện với những cuộc hành trình khác nhau trong quá trình tìm kiếm tuổi xuân</p>
         </div>
         <div class="row">
-            <div class="col-xl-7 col-lg-8">
+            <div class="col-xl-7 col-lg-8 col-md-8">
                 <div class="story__content">
                     <div id="carouselExampleIndicators" class="carousel slide content__carousel">
                         
@@ -49,7 +49,7 @@
                     </div>                    
                 </div>
             </div>
-            <div class="col-xl-5 col-lg-4">
+            <div class="col-xl-5 col-lg-4 col-md-4">
                 <div class="story__form">
                     <div class="form__image">
                         <img src="../../assets/images/story/banner-register.png" alt="">
