FAM-26 resposive styles for small-mobile

--- a/pages/default-modules/footer.html
+++ b/pages/default-modules/footer.html
@@ -117,12 +117,12 @@
             <div class="container">
 
                 <div class="row">
-                    <div class="col-xl-10 col-lg-9 col-md-8 col-sm-8">
+                    <div class="col-xl-10 col-lg-9 col-md-8 col-sm-8 col-12">
                         <div class="digital__copyright">
                             <p>© Bản quyền thuộc về <b>Pamas</b> 2016 Điều khoản</p>
                         </div>
                     </div>
-                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-4">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-4 col-12">
                         <div class="digital__socialmedia">
                             <a href=""><i class="fa-solid fa-phone"></i></a>
                             <a href=""><i class="fa-brands fa-instagram"></i></a>
