--- a/pages/default-modules/mobi_nav.html
+++ b/pages/default-modules/mobi_nav.html
@@ -1,6 +1,6 @@
 <div class="mobinav__container">
     <div class="row">
-        <div class="col-lg-2 col-md-2 col-sm-2">
+        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
           <label for="nav-mobile-input" class="menu__icon">
             <img src="../../assets/images/img-bars.png" id="menu-icon" alt="menu icon"/>
             <input type="checkbox" class="nav__input" id="nav-mobile-input"/>
@@ -42,12 +42,12 @@
                 </div>            
          
         </div>
-        <div class="col-lg-8 col-md-8 col-sm-8">
+        <div class="col-lg-8 col-md-8 col-sm-8 col-8">
             <div class="mobinav__logo">
                 <img src="../../assets/images/logo-mobie.png" alt="">
             </div>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2">
+        <div class="col-lg-2 col-md-2 col-sm-2 col-2">
             <div class="mobinav__option">
               <div class="mobinav__language">
                 <ul class="nav">
@@ -91,4 +91,19 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="mobile__contact">
+  <div class="row">
+    <div class="col-6">
+      <div class="contact__phone">
+        <i class="fa-solid fa-phone"></i>
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="contact__message">
+        <i class="fa-regular fa-message"></i>
+      </div>
+    </div>
+  </div>
 </div>
