FAM-30 update effect hover in header_hotline

--- a/pages/default-modules/header.html
+++ b/pages/default-modules/header.html
@@ -1,14 +1,14 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-4">
             <div class="header__left" >
                 <div class="header__hotline">
                     <div class="hotline__icon">
                         <img src="../../assets/images/phone-border.png" alt="hotline">
                     </div>
                     <div class="hotline__phone">
-                        <a href="">0934.45.45.56 <span>(TP.HCM - Vũng Tàu)</span></a>
-                        <a href="">0902.34.34.99 <span>(Hà Nội - Đà Nẵng)</span></a>
+                        <p>0934.45.45.56<span>(TP.HCM - Vũng Tàu)</span></p>
+                        <p>0902.34.34.99<span>(Hà Nội - Đà Nẵng)</span></p>
                     </div>  
                 </div>
                 <div class="header__worktime">
@@ -17,14 +17,14 @@
                 </div>      
             </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-4">
             <div class="header_background">
                 <div class="header__logo">
                     <img src="../../assets/images/logo.png" alt="Logo">
                 </div>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-4">
             <div class="header__right">
                 <div class="header__language dropdown">
                     <a class="btn primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
