FAM-30 update styles in header section

--- a/pages/default-modules/header.html
+++ b/pages/default-modules/header.html
@@ -1,14 +1,14 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-sm-4">
             <div class="header__left" >
                 <div class="header__hotline">
                     <div class="hotline__icon">
                         <img src="../../assets/images/phone-border.png" alt="hotline">
                     </div>
                     <div class="hotline__phone">
-                        <p>0934.45.45.56<span>(TP.HCM - Vũng Tàu)</span></p>
-                        <p>0902.34.34.99<span>(Hà Nội - Đà Nẵng)</span></p>
+                        <p>0934.45.45.56  <span>   (TP.HCM - Vũng Tàu)</span></p>
+                        <p>0902.34.34.99  <span>   (Hà Nội - Đà Nẵng)</span></p>
                     </div>  
                 </div>
                 <div class="header__worktime">
@@ -17,17 +17,17 @@
                 </div>      
             </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-sm-4">
             <div class="header_background">
                 <div class="header__logo">
                     <img src="../../assets/images/logo.png" alt="Logo">
                 </div>
             </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-sm-4">
             <div class="header__right">
                 <div class="header__language dropdown">
-                    <a class="btn primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="language__btn" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="../../assets/images/lang-vi.png"> 
                         <span>Vietnamese</span>
                       </a>
@@ -46,12 +46,12 @@
                     <i class="fa-brands fa-twitter"></i>
                 </div>
                 <div class="header__smallnav">
-                    <ul>
-                        <li>Tin tức</li>
-                        <li>Hoạt động</li>
-                        <li>Site map</li>
-                    </ul>
-                </div>  
+                    <a>Tin tức</a>
+                    <a>Hoạt động</a>
+                    <a>Site map</a>
+                </div>
+             
+               
             </div>
         </div>
     </div>
