FAM-34 update styles in skinreborn section

--- a/pages/home/skinreborn.html
+++ b/pages/home/skinreborn.html
@@ -134,13 +134,11 @@
                                 </div>
                             </div>  
                             <div class="skinreborn_text_replace">
-                                <h5>Skin reborn</h5>
-                                    <h3>blemish</h3>
-                                    <p>What would you do if you could achieve the benefits of a professional skin care treatment at home for a fraction of the cost of a visit to the</p>
-                                    <a> 
-                                        <p>Xem chi tiết</p>
-                                        <i class="fa-sharp fa-solid fa-arrow-right"></i>
-                                    </a>
+                                    <h5>Công thức</h5>
+                                    <h3>triệu đô</h3>
+                                    <h5>bước</h5>
+                                    <h3>đột phá</h3>
+                                    <h5>trong ngành spa</h5>
                             </div>      
                     </div>
                 </div>
