FAM-35 update responsive styles in main page

--- a/pages/default-modules/mobi_nav.html
+++ b/pages/default-modules/mobi_nav.html
@@ -63,7 +63,7 @@
                         <li>
                           <a class="dropdown-item" href="#">
                           <img src="../../assets/images/lang-vi.png"> 
-                          <span>English</span>
+                          <span>Vietnamese</span>
                           </a>
                         </li>
                       </ul>
