--- a/pages/home.html
+++ b/pages/home.html
@@ -12,7 +12,6 @@
     <link href="../css/mobinav.css" rel="stylesheet">
     <link href="../css/home.css" rel="stylesheet">
     <link href="../css/footer.css" rel="stylesheet">
-    <link href="../css/resposive.css" rel="stylesheet">
     <script src="../modules/jquery3.7.0.js"></script>
     <script> 
         $(function(){
@@ -32,6 +31,7 @@
 </head>
 <body>
     <div id="main-content">
+        <div id="overlay"></div>
     <header>
         <div id="header" class="header"></div>
     </header>
